--- a/Web/bomandyam/html/main.html
+++ b/Web/bomandyam/html/main.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>봄이와 얌</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+        <script type="text/javascript" src="../js/main.js"></script>
+
     </head>
 <body>
 
@@ -13,7 +17,7 @@
                 <div></div>
                 <h1 class="logo">
                     <a href="#">
-                        <img src="img/logo.svg" alt="메인페이지 로고">
+                        <img src="../img/logo.svg" alt="메인페이지 로고">
                     </a>
                     <a class="logo_text" href="#">
                         <div class="logo_text">BOM and YAM</div>
@@ -48,7 +52,7 @@
                 <div class="search_area">
                     <input type="text" id="search_form" name="keyword" class="search_text">
                     <a href="#" class="search_img">
-                        <img src="img/search.svg" alt="메인페이지 로고">
+                        <img src="../img/search.svg" alt="메인페이지 로고">
                     </a>
                 </div>
             </div>
@@ -57,13 +61,17 @@
         <!--헤더-->
         <div id="container">
             <div class="main_visual">
-                <img src="img/banner1.svg" width="1500px" height="400" alt="배너1">
-                <button class="ban_btn1">
-                    <img src="img/bannerbtn1.svg">
-                </button>
-                <button class="ban_btn2">
-                    <img src="img/bannerbtn2.svg">
-                </button>
+
+                <div class="slide">
+                    <ul>
+                        <li><img src="../img/banner1.svg" alt="배너1"></li>
+                        <li><img src="../img/banner2.svg" alt="배너2"></li>
+                        <li><img src="../img/banner3.svg" alt="배너3"></li>
+                        <li><img src="../img/banner4.svg" alt="배너4"></li>
+                    </ul>
+                    <button class="prev" type="button"><img src="../img/bannerbtn1.svg" alt="이전버튼"></button>
+                    <button class="next" type="button"><img src="../img/bannerbtn2.svg" alt="다음버튼"></button>
+                </div>
             </div>
             <!--메인베너-->
             <div class="best">
@@ -77,7 +85,7 @@
                 <div class="ani_best">
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -86,7 +94,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -95,7 +103,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -104,7 +112,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -122,7 +130,7 @@
                 <div class="ani_best">
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/catbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
                                 <b>32,000원</b>
@@ -131,7 +139,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/catbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
                                 <b>32,000원</b>
@@ -140,7 +148,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/catbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
                                 <b>32,000원</b>
@@ -149,7 +157,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/catbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
                                 <b>32,000원</b>
@@ -167,7 +175,7 @@
                 <div class="ani_best">
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/yam.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/yam.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">얌이와의 설레는 아이컨택</div>
                             </div>
@@ -175,7 +183,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/bom.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/bom.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">봄이에게 모델포즈 시키는 법</div>
                             </div>
@@ -183,7 +191,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/yam.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/yam.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">과자를 바라보고 있는 얌</div>
                             </div>
@@ -191,7 +199,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="img/bom.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../img/bom.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">자기가 귀여운걸 아는게 분명해</div>
                             </div>
@@ -225,5 +233,8 @@
         </div>
         <!--footer-->
     </div>
+<script>
+
+</script>
 </body>
 </html>
