bomspick, yamspick html css완성

--- a/Web/bomandyam/html/main.html
+++ b/Web/bomandyam/html/main.html
@@ -7,10 +7,8 @@
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
         <script type="text/javascript" src="../js/main.js"></script>
-
     </head>
 <body>
-
     <div id="wrap">
         <div id="header_wrap">
             <div class="headerContainer">
@@ -209,7 +207,7 @@
             </div>
             <!--베스트 영역-->
         </div>
-        <!--컨테이너-->
+        <!--컨테이너 영역-->
         <div id="footer">
             <div class="top_footer"></div>
             <div class="bottom_footer">
