--- a/Web/bomandyam/html/bomspick.html
+++ b/Web/bomandyam/html/bomspick.html
@@ -12,10 +12,10 @@
             <div class="headerContainer">
                 <div></div>
                 <h1 class="logo">
-                    <a href="#">
+                    <a href="../html/main.html">
                         <img src="../img/logo.svg" alt="메인페이지 로고">
                     </a>
-                    <a class="logo_text" href="#">
+                    <a class="logo_text" href="../html/main.html">
                         <div class="logo_text">BOM and YAM</div>
                     </a>
                 </h1>
@@ -24,7 +24,7 @@
                         <li style="padding-right: 25px">
                             <a href="#">회원가입</a>
                             /
-                            <a href="#">로그인</a>
+                            <a href="../html/login.html">로그인</a>
                         </li>
                         <li>
                             <a href="#">장바구니</a>
