--- a/Web/bomandyam/html/login.html
+++ b/Web/bomandyam/html/login.html
@@ -11,10 +11,10 @@
                 <div class="headerContainer">
                     <div></div>
                     <h1 class="logo">
-                        <a href="#">
+                        <a href="../html/main.html">
                             <img src="../img/logo.svg" alt="메인페이지 로고">
                         </a>
-                        <a class="logo_text" href="#">
+                        <a class="logo_text" href="../html/main.html">
                             <div class="logo_text">BOM and YAM</div>
                         </a>
                     </h1>
@@ -23,7 +23,7 @@
                             <li style="padding-right: 25px">
                                 <a href="#">회원가입</a>
                                 /
-                                <a href="#">로그인</a>
+                                <a href="../html/login.html">로그인</a>
                             </li>
                             <li>
                                 <a href="#">장바구니</a>
@@ -54,7 +54,7 @@
                 <!--카테고리헤더-->
             </div>
             <div id="container">
-                <div class="login_text">로그인</div>
+                <div class="login_text">LOGIN</div>
                 <div class="login_box">
                     <div class="item login_txt">회원 로그인</div>
                     <input type="text" class="item id_box" onfocus="this.value=''" value="아이디(이메일)"></input>
