--- a/Web/bomandyam/html/main.html
+++ b/Web/bomandyam/html/main.html
@@ -14,10 +14,10 @@
             <div class="headerContainer">
                 <div></div>
                 <h1 class="logo">
-                    <a href="#">
+                    <a href="../html/main.html">
                         <img src="../img/logo.svg" alt="메인페이지 로고">
                     </a>
-                    <a class="logo_text" href="#">
+                    <a class="logo_text" href="../html/main.html">
                         <div class="logo_text">BOM and YAM</div>
                     </a>
                 </h1>
@@ -26,7 +26,7 @@
                         <li style="padding-right: 25px">
                             <a href="#">회원가입</a>
                             /
-                            <a href="#">로그인</a>
+                            <a href="../html/login.html">로그인</a>
                         </li>
                         <li>
                             <a href="#">장바구니</a>
@@ -40,7 +40,7 @@
                     <div class="btnAllCategory">전체 카테고리</div>
                     <ul class="navi_list">
                         <li style="padding-right: 25px">
-                            <a href="#">베스트</a>
+                            <a href="../html/best.html">베스트</a>
                         </li>
                         <li>
                             <a href="#">노하우</a>
@@ -80,44 +80,52 @@
                     </div>
                     <button class="more_btn">more</button>
                 </div>
-                <div class="ani_best">
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                <b>32,000원</b>
+                <ul class="ani_best">
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
+                                    <b>32,000원</b>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                <b>32,000원</b>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
+                                    <b>32,000원</b>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                <b>32,000원</b>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
+                                    <b>32,000원</b>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                <b>32,000원</b>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
+                                    <b>32,000원</b>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
+                        </a>
+                    </li>
+                </ul>
                 <div class="main_ani_best">
                     <div></div>
                     <div class="ani_best_title">
@@ -125,44 +133,52 @@
                     </div>
                     <button class="more_btn">more</button>
                 </div>
-                <div class="ani_best">
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
-                                <b>32,000원</b>
+                <ul class="ani_best">
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
+                                    <b>32,000원</b>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
-                                <b>32,000원</b>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
+                                    <b>32,000원</b>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
-                                <b>32,000원</b>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
+                                    <b>32,000원</b>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
-                                <b>32,000원</b>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
+                                    <b>32,000원</b>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
+                        </a>
+                    </li>
+                </ul>
                 <div class="main_ani_best">
                     <div></div>
                     <div class="ani_best_title">
@@ -170,40 +186,48 @@
                     </div>
                     <button class="more_btn">more</button>
                 </div>
-                <div class="ani_best">
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/yam.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">얌이와의 설레는 아이컨택</div>
+                <ul class="ani_best">
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/yam.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">얌이와의 설레는 아이컨택</div>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/bom.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">봄이에게 모델포즈 시키는 법</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/bom.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">봄이에게 모델포즈 시키는 법</div>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/yam.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">과자를 바라보고 있는 얌</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/yam.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">과자를 바라보고 있는 얌</div>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="ani_product">
-                            <img src="../img/bom.svg" width="200px" height="200px" alt="얌이">
-                            <div class="product_text">
-                                <div class="product_title">자기가 귀여운걸 아는게 분명해</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="ani_product">
+                                <img src="../img/bom.svg" width="200px" height="200px" alt="얌이">
+                                <div class="product_text">
+                                    <div class="product_title">자기가 귀여운걸 아는게 분명해</div>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <!--베스트 영역-->
         </div>
@@ -231,8 +255,6 @@
         </div>
         <!--footer-->
     </div>
-<script>
-
-</script>
 </body>
 </html>
+
