--- a/Web/bomandyam/html/join.html
+++ b/Web/bomandyam/html/join.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>join</title>
         <link rel="stylesheet" href="../css/login.css">
+        <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
         <div id="wrap">
@@ -11,10 +12,10 @@
                 <div class="headerContainer">
                     <div></div>
                     <h1 class="logo">
-                        <a href="#">
-                            <img src="img/logo.svg" alt="메인페이지 로고">
+                        <a href="../html/main.html">
+                            <img src="../img/logo.svg" alt="메인페이지 로고">
                         </a>
-                        <a class="logo_text" href="#">
+                        <a class="logo_text" href="../html/main.html">
                             <div class="logo_text">BOM and YAM</div>
                         </a>
                     </h1>
@@ -23,7 +24,7 @@
                             <li style="padding-right: 25px">
                                 <a href="#">회원가입</a>
                                 /
-                                <a href="#">로그인</a>
+                                <a href="../html/login.html">로그인</a>
                             </li>
                             <li>
                                 <a href="#">장바구니</a>
@@ -47,7 +48,7 @@
                     <div class="search_area">
                         <input type="text" id="search_form" name="keyword" class="search_text">
                         <a href="#" class="search_img">
-                            <img src="img/search.svg" alt="메인페이지 로고">
+                            <img src="../img/search.svg" alt="메인페이지 로고">
                         </a>
                     </div>
                 </div>
