--- a/Web/bomandyam/html/join.html
+++ b/Web/bomandyam/html/join.html
@@ -12,7 +12,7 @@
                     <div></div>
                     <h1 class="logo">
                         <a href="#">
-                            <img src="img/logo.svg" alt="메인페이지 로고">
+                            <img src="../img/logo.svg" alt="메인페이지 로고">
                         </a>
                         <a class="logo_text" href="#">
                             <div class="logo_text">BOM and YAM</div>
