--- a/Web/bomandyam/html/petInfo.html
+++ b/Web/bomandyam/html/petInfo.html
@@ -58,8 +58,8 @@
                 <div class="petInfo_text">동물 정보 입력</div>
                 <div class="petInfo_box">
                     <div class="petInfo_item petImage_input"> 
-                        <label for="ex_file">업로드</label> 
-                        <input type="file" id="ex_file"> 
+                        <label for="ex_file">사진을 첨부해주세요</label>
+                        <input type="file" id="ex_file">
                     </div>
                     <label class="petInfo_item dog_click"><input type="radio" checked="checked" name="species"><span>강아지</span></input></label>
                     <label class="petInfo_item cat_click"><input type="radio" name="species"><span>고양이</span></input></label>
