얌스픽 봄스픽 아이콘 추가

--- a/Web/bomandyam/html/login.html
+++ b/Web/bomandyam/html/login.html
@@ -5,6 +5,7 @@
         <title>login</title>
         <link rel="stylesheet" href="../css/login.css">
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/pick_icon.css">
     </head>
     <body>
         <div id="wrap">
@@ -54,6 +55,13 @@
                 </div>
                 <!--카테고리헤더-->
             </div>
+            <a href="../html/bomspick.html">
+                <div class="BOM_icon">BOM's pick</div>
+            </a>
+            <a href="../html/yamspick.html">
+                <div class="YAM_icon">YAM's pick</div>
+            </a>
+            <!--pick 아이콘-->
             <div id="container">
                 <div class="login_text">LOGIN</div>
                 <div class="login_box">
@@ -68,8 +76,8 @@
                     <a href="#" class="item2 id_find">아이디 찾기</a>
                     
                 </div>
-                <a href="#" class="login_img">
-                    <img src="../img" alt="회원가입창 이동">
+                <a href="../html/join.html" class="login_img">
+                    <img src="../img/joinLink.svg" alt="회원가입창 이동">
                 </a>
             </div>
             <div id="footer">
