--- a/Web/bomandyam/html/petInfo.html
+++ b/Web/bomandyam/html/petInfo.html
@@ -54,6 +54,13 @@
                 </div>
             </div>
             <!--카테고리헤더-->
+            <a href="../html/bomspick.html">
+                <div class="BOM_icon">BOM's pick</div>
+            </a>
+            <a href="../html/yamspick.html">
+                <div class="YAM_icon">YAM's pick</div>
+            </a>
+            <!--pick 아이콘-->
             <div id="container">
                 <div class="petInfo_text">동물 정보 입력</div>
                 <div class="petInfo_box">
