사이드 배너 완성

--- a/Web/bomandyam/html/main.html
+++ b/Web/bomandyam/html/main.html
@@ -4,9 +4,11 @@
         <meta charset="utf-8">
         <title>봄이와 얌</title>
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/floatbanner.css">
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
         <script type="text/javascript" src="../js/main.js"></script>
+        <script type="text/javascript" src="../js/floatbanner.js"></script>
     </head>
 <body>
     <div id="wrap">
@@ -58,8 +60,15 @@
         </div>
         <!--헤더-->
         <div id="container">
-            <div class="main_visual">
+            <div class="float_area">
+                <div class="float_menu">
+                    <div class="side_banner">
+                        <div class="side_title">추천상품</div>
+                    </div>
+                </div>
 
+            </div>
+            <div class="main_visual">
                 <div class="slide">
                     <ul>
                         <li><img src="../img/banner1.svg" alt="배너1"></li>
@@ -72,6 +81,7 @@
                 </div>
             </div>
             <!--메인베너-->
+
             <div class="best">
                 <div class="main_ani_best">
                     <div></div>
@@ -254,6 +264,7 @@
             </div>
         </div>
         <!--footer-->
+
     </div>
 </body>
 </html>
