pick 고쳐서 다시

--- a/Web/bomandyam/html/petInfo.html
+++ b/Web/bomandyam/html/petInfo.html
@@ -5,6 +5,7 @@
         <title>Pet Information</title>
         <link rel="stylesheet" href="../css/petInfo.css">
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/pick_icon.css">
     </head>
     <body>
         <div id="wrap">
