--- a/Web/bomandyam/html/best.html
+++ b/Web/bomandyam/html/best.html
@@ -5,6 +5,7 @@
     <title>봄이와 얌</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/best.css">
+    <link rel="stylesheet" href="../css/pick_icon.css">
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="../js/best.js"></script>
 </head>
