--- a/Web/bomandyam/html/bomspick.html
+++ b/Web/bomandyam/html/bomspick.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/pick.css">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/pick_icon.css">
     <title>BOM's pick</title>
 </head>
 <body>
