--- a/Web/bomandyam/html/join.html
+++ b/Web/bomandyam/html/join.html
@@ -5,6 +5,7 @@
         <title>join</title>
         <link rel="stylesheet" href="../css/login.css">
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/pick_icon.css">
     </head>
     <body>
         <div id="wrap">
@@ -12,11 +13,7 @@
                 <div class="headerContainer">
                     <div></div>
                     <h1 class="logo">
-<<<<<<< HEAD
-                        <a href="#">
-=======
                         <a href="../html/main.html">
->>>>>>> be0aeff142b472bd46cdc0a18fc3cf621c63d51d
                             <img src="../img/logo.svg" alt="메인페이지 로고">
                         </a>
                         <a class="logo_text" href="../html/main.html">
