--- a/Web/bomandyam/html/main.html
+++ b/Web/bomandyam/html/main.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>봄이와 얌</title>
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/pick_icon.css">
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
         <script type="text/javascript" src="../js/main.js"></script>
@@ -63,7 +64,7 @@
         <a href="../html/yamspick.html">
             <div class="YAM_icon">YAM's pick</div>
         </a>
-        <!--pick 아이콘-->
+        
         <div id="container">
             <div class="main_visual">
 
