배너 페이지 적용완성

--- a/Web/bomandyam/html/best.html
+++ b/Web/bomandyam/html/best.html
@@ -5,8 +5,11 @@
     <title>봄이와 얌</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/best.css">
+    <link rel="stylesheet" href="../css/floatbanner.css">
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="../js/best.js"></script>
+    <script type="text/javascript" src="../js/floatbanner.js"></script>
+
 </head>
 <body>
 <div id="wrap">
@@ -65,6 +68,14 @@
     </a>
     <!--pick 아이콘-->
     <div id="container">
+        <div class="float_area">
+            <div class="float_menu">
+                <div class="side_banner">
+                    <div class="side_title">추천상품</div>
+                </div>
+            </div>
+
+        </div>
         <div class="tab_menu">
             <ul class="tab_title">
                 <li class="tab_btn current" data-tab="tab-1">DOG</li>
