--- a/Web/bomandyam/html/yamspick.html
+++ b/Web/bomandyam/html/yamspick.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/pick.css">
+    <link rel="stylesheet" href="../css/floatbanner.css">
     <link rel="stylesheet" href="../css/main.css">
+    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="../js/floatbanner.js"></script>
     <title>YAM's pick</title>
 </head>
 <body>
@@ -63,6 +66,13 @@
     </a>
     <!--pick 아이콘-->
     <div id="container">
+        <div class="float_area">
+            <div class="float_menu">
+                <div class="side_banner">
+                    <div class="side_title">추천상품</div>
+                </div>
+            </div>
+        </div>
         <div class="pick">
             <div class="profile_title">
                 BOM's pick
