상품판매 페이지

--- a/Web/bomandyam/html/best.html
+++ b/Web/bomandyam/html/best.html
@@ -5,11 +5,8 @@
     <title>봄이와 얌</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/best.css">
-<<<<<<< HEAD
     <link rel="stylesheet" href="../css/floatbanner.css">
-=======
     <link rel="stylesheet" href="../css/pick_icon.css">
->>>>>>> 349c2d411b98021a1aac8e71a7add1dd55f08580
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="../js/best.js"></script>
     <script type="text/javascript" src="../js/floatbanner.js"></script>
@@ -31,7 +28,7 @@
             <div class="navi">
                 <ul class="navi_list">
                     <li style="padding-right: 25px">
-                        <a href="#">회원가입</a>
+                        <a href="../html/join.html">회원가입</a>
                         /
                         <a href="../html/login.html">로그인</a>
                     </li>
@@ -47,7 +44,7 @@
                 <div class="btnAllCategory">전체 카테고리</div>
                 <ul class="navi_list">
                     <li style="padding-right: 25px">
-                        <a href="#">베스트</a>
+                        <a href="../html/best.html">베스트</a>
                     </li>
                     <li>
                         <a href="#">노하우</a>
