--- a/Web/bomandyam/html/main.html
+++ b/Web/bomandyam/html/main.html
@@ -27,7 +27,7 @@
                 <div class="navi">
                     <ul class="navi_list">
                         <li style="padding-right: 25px">
-                            <a href="#">회원가입</a>
+                            <a href="../html/join.html">회원가입</a>
                             /
                             <a href="../html/login.html">로그인</a>
                         </li>
@@ -66,7 +66,7 @@
         <a href="../html/yamspick.html">
             <div class="YAM_icon">YAM's pick</div>
         </a>
-        
+        <!--    픽 고정배너-->
         <div id="container">
             <div class="float_area">
                 <div class="float_menu">
