--- a/Web/bomandyam/html/bomspick.html
+++ b/Web/bomandyam/html/bomspick.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/pick.css">
     <link rel="stylesheet" href="../css/main.css">
-<<<<<<< HEAD
     <link rel="stylesheet" href="../css/floatbanner.css">
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="../js/floatbanner.js"></script>
-=======
     <link rel="stylesheet" href="../css/pick_icon.css">
->>>>>>> 349c2d411b98021a1aac8e71a7add1dd55f08580
     <title>BOM's pick</title>
 </head>
 <body>
@@ -29,7 +26,7 @@
                 <div class="navi">
                     <ul class="navi_list">
                         <li style="padding-right: 25px">
-                            <a href="#">회원가입</a>
+                            <a href="../html/join.html">회원가입</a>
                             /
                             <a href="../html/login.html">로그인</a>
                         </li>
@@ -45,7 +42,7 @@
                     <div class="btnAllCategory">전체 카테고리</div>
                     <ul class="navi_list">
                         <li style="padding-right: 25px">
-                            <a href="#">베스트</a>
+                            <a href="../html/best.html">베스트</a>
                         </li>
                         <li>
                             <a href="#">노하우</a>
