--- a/Web/bomandyam/html/login.html
+++ b/Web/bomandyam/html/login.html
@@ -23,7 +23,7 @@
                     <div class="navi">
                         <ul class="navi_list">
                             <li style="padding-right: 25px">
-                                <a href="#">회원가입</a>
+                                <a href="../html/join.html">회원가입</a>
                                 /
                                 <a href="../html/login.html">로그인</a>
                             </li>
@@ -39,7 +39,7 @@
                         <div class="btnAllCategory">전체 카테고리</div>
                         <ul class="navi_list">
                             <li style="padding-right: 25px">
-                                <a href="#">베스트</a>
+                                <a href="../html/best.html">베스트</a>
                             </li>
                             <li>
                                 <a href="#">노하우</a>
