--- a/Web/bomandyam/html/best.html
+++ b/Web/bomandyam/html/best.html
@@ -18,10 +18,10 @@
         <div class="headerContainer">
             <div></div>
             <h1 class="logo">
-                <a href="../html/main.html">
+                <a href="../index.html">
                     <img src="../img/logo.svg" alt="메인페이지 로고">
                 </a>
-                <a class="logo_text" href="../html/main.html">
+                <a class="logo_text" href="../index.html">
                     <div class="logo_text">BOM and YAM</div>
                 </a>
             </h1>
@@ -212,17 +212,7 @@
                             </div>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
+
                 </ul>
             </div>
         </div>
