--- a/Web/bomandyam/html/bomspick.html
+++ b/Web/bomandyam/html/bomspick.html
@@ -16,7 +16,7 @@
             <div class="headerContainer">
                 <div></div>
                 <h1 class="logo">
-                    <a href="../html/main.html">
+                    <a href="/index.html">
                         <img src="../img/logo.svg" alt="메인페이지 로고">
                     </a>
                     <a class="logo_text" href="../html/main.html">
