--- a/Web/bomandyam/html/login.html
+++ b/Web/bomandyam/html/login.html
@@ -13,10 +13,10 @@
                 <div class="headerContainer">
                     <div></div>
                     <h1 class="logo">
-                        <a href="../html/main.html">
+                        <a href="../index.html">
                             <img src="../img/logo.svg" alt="메인페이지 로고">
                         </a>
-                        <a class="logo_text" href="../html/main.html">
+                        <a class="logo_text" href="../index.html">
                             <div class="logo_text">BOM and YAM</div>
                         </a>
                     </h1>
