--- a/Web/bomandyam/html/privacyPolicy.html
+++ b/Web/bomandyam/html/privacyPolicy.html
@@ -14,17 +14,17 @@
             <div class="headerContainer">
                 <div></div>
                 <h1 class="logo">
-                    <a href="../html/main.html">
+                    <a href="../index.html">
                         <img src="../img/logo.svg" alt="메인페이지 로고">
                     </a>
-                    <a class="logo_text" href="../html/main.html">
+                    <a class="logo_text" href="../index.html">
                         <div class="logo_text">BOM and YAM</div>
                     </a>
                 </h1>
                 <div class="navi">
                     <ul class="navi_list">
                         <li style="padding-right: 25px">
-                            <a href="#">회원가입</a>
+                            <a href="../html/join.html">회원가입</a>
                             /
                             <a href="../html/login.html">로그인</a>
                         </li>
