--- a/Web/bomandyam/index.html
+++ b/Web/bomandyam/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>봄이와 얌</title>
-        <link rel="stylesheet" href="../css/main.css">
-        <link rel="stylesheet" href="../css/pick_icon.css">
-        <link rel="stylesheet" href="../css/floatbanner.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/pick_icon.css">
+        <link rel="stylesheet" href="css/floatbanner.css">
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-        <script type="text/javascript" src="../js/main.js"></script>
-        <script type="text/javascript" src="../js/floatbanner.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/floatbanner.js"></script>
     </head>
 <body>
     <div id="wrap">
@@ -18,7 +18,7 @@
                 <div></div>
                 <h1 class="logo">
                     <a href="../html/main.html">
-                        <img src="../img/logo.svg" alt="메인페이지 로고">
+                        <img src="img/logo.svg" alt="메인페이지 로고">
                     </a>
                     <a class="logo_text" href="../html/main.html">
                         <div class="logo_text">BOM and YAM</div>
@@ -27,9 +27,9 @@
                 <div class="navi">
                     <ul class="navi_list">
                         <li style="padding-right: 25px">
-                            <a href="../html/join.html">회원가입</a>
+                            <a href="html/join.html">회원가입</a>
                             /
-                            <a href="../html/login.html">로그인</a>
+                            <a href="html/login.html">로그인</a>
                         </li>
                         <li>
                             <a href="#">장바구니</a>
@@ -43,7 +43,7 @@
                     <div class="btnAllCategory">전체 카테고리</div>
                     <ul class="navi_list">
                         <li style="padding-right: 25px">
-                            <a href="../html/best.html">베스트</a>
+                            <a href="html/best.html">베스트</a>
                         </li>
                         <li>
                             <a href="#">노하우</a>
@@ -53,17 +53,17 @@
                 <div class="search_area">
                     <input type="text" id="search_form" name="keyword" class="search_text">
                     <a href="#" class="search_img">
-                        <img src="../img/search.svg" alt="메인페이지 로고">
+                        <img src="img/search.svg" alt="메인페이지 로고">
                     </a>
                 </div>
             </div>
             <!--카테고리헤더-->
         </div>
         <!--헤더-->
-        <a href="../html/bomspick.html">
+        <a href="html/bomspick.html">
             <div class="BOM_icon">BOM's pick</div>
         </a>
-        <a href="../html/yamspick.html">
+        <a href="html/yamspick.html">
             <div class="YAM_icon">YAM's pick</div>
         </a>
         <!--    픽 고정배너-->
@@ -79,13 +79,13 @@
             <div class="main_visual">
                 <div class="slide">
                     <ul>
-                        <li><img src="../img/banner1.svg" alt="배너1"></li>
-                        <li><img src="../img/banner2.svg" alt="배너2"></li>
-                        <li><img src="../img/banner3.svg" alt="배너3"></li>
-                        <li><img src="../img/banner4.svg" alt="배너4"></li>
+                        <li><img src="img/banner1.svg" alt="배너1"></li>
+                        <li><img src="img/banner2.svg" alt="배너2"></li>
+                        <li><img src="img/banner3.svg" alt="배너3"></li>
+                        <li><img src="img/banner4.svg" alt="배너4"></li>
                     </ul>
-                    <button class="prev" type="button"><img src="../img/bannerbtn1.svg" alt="이전버튼"></button>
-                    <button class="next" type="button"><img src="../img/bannerbtn2.svg" alt="다음버튼"></button>
+                    <button class="prev" type="button"><img src="img/bannerbtn1.svg" alt="이전버튼"></button>
+                    <button class="next" type="button"><img src="img/bannerbtn2.svg" alt="다음버튼"></button>
                 </div>
             </div>
             <!--메인베너-->
@@ -101,7 +101,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -112,7 +112,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -123,7 +123,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -134,7 +134,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -154,7 +154,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/catbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
                                     <b>32,000원</b>
@@ -165,7 +165,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/catbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
                                     <b>32,000원</b>
@@ -176,7 +176,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/catbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
                                     <b>32,000원</b>
@@ -187,7 +187,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/catbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/catbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">오픈팜 봄이의 닭고기&연어</div>
                                     <b>32,000원</b>
@@ -207,7 +207,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/yam.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/yam.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">얌이와의 설레는 아이컨택</div>
                                 </div>
@@ -217,7 +217,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/bom.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/bom.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">봄이에게 모델포즈 시키는 법</div>
                                 </div>
@@ -227,7 +227,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/yam.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/yam.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">과자를 바라보고 있는 얌</div>
                                 </div>
@@ -237,7 +237,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/bom.svg" width="200px" height="200px" alt="얌이">
+                                <img src="img/bom.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">자기가 귀여운걸 아는게 분명해</div>
                                 </div>
