-Change Directory name for ejs engine

--- a/Web/bomandyam/html/bomspick.html
+++ b/Web/bomandyam/html/bomspick.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/pick.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/floatbanner.css">
+    <link rel="stylesheet" href="../stylesheets/pick.css">
+    <link rel="stylesheet" href="../stylesheets/main.css">
+    <link rel="stylesheet" href="../stylesheets/floatbanner.css">
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script type="text/javascript" src="../js/floatbanner.js"></script>
-    <link rel="stylesheet" href="../css/pick_icon.css">
+    <script type="text/javascript" src="../javascripts/floatbanner.js"></script>
+    <link rel="stylesheet" href="../stylesheets/pick_icon.css">
     <title>BOM's pick</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
                 <div></div>
                 <h1 class="logo">
                     <a href="/index.html">
-                        <img src="../img/logo.svg" alt="메인페이지 로고">
+                        <img src="../images/logo.svg" alt="메인페이지 로고">
                     </a>
                     <a class="logo_text" href="../html/main.html">
                         <div class="logo_text">BOM and YAM</div>
@@ -52,7 +52,7 @@
                 <div class="search_area">
                     <input type="text" id="search_form" name="keyword" class="search_text">
                     <a href="#" class="search_img">
-                        <img src="../img/search.svg" alt="메인페이지 로고">
+                        <img src="../images/search.svg" alt="메인페이지 로고">
                     </a>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="profile">
                     <div class="profile_img">
-                        <img src="../img/bom2.svg" width="500px" height="500px" alt="봄이">
+                        <img src="../images/bom2.svg" width="500px" height="500px" alt="봄이">
                     </div>
                     <div class="profile_content">
                         <h4 style="margin: 0 0 20px 0">BOM's profile</h4>
@@ -94,7 +94,7 @@
                 <div class="pick_product">
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -103,7 +103,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -112,7 +112,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -121,7 +121,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -130,7 +130,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -139,7 +139,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -148,7 +148,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -157,7 +157,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -166,7 +166,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -175,7 +175,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -184,7 +184,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
@@ -193,7 +193,7 @@
                     </a>
                     <a href="#">
                         <div class="ani_product">
-                            <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                            <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                             <div class="product_text">
                                 <div class="product_title">건강백서 건강한 피부 6kg</div>
                                 <b>32,000원</b>
