--- a/Web/bomandyam/html/category.html
+++ b/Web/bomandyam/html/category.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>category</title>
-        <link rel="stylesheet" href="../css/category.css">
-        <link rel="stylesheet" href="../css/main.css">
-        <link rel="stylesheet" href="../css/pick_icon.css">
+        <link rel="stylesheet" href="../stylesheets/category.css">
+        <link rel="stylesheet" href="../stylesheets/main.css">
+        <link rel="stylesheet" href="../stylesheets/pick_icon.css">
     </head>
     <body>
         <div id="wrap">
@@ -14,7 +14,7 @@
                     <div></div>
                     <h1 class="logo">
                         <a href="../html/main.html">
-                            <img src="../img/logo.svg" alt="메인페이지 로고">
+                            <img src="../images/logo.svg" alt="메인페이지 로고">
                         </a>
                         <a class="logo_text" href="../html/main.html">
                             <div class="logo_text">BOM and YAM</div>
@@ -49,7 +49,7 @@
                     <div class="search_area">
                         <input type="text" id="search_form" name="keyword" class="search_text">
                         <a href="#" class="search_img">
-                            <img src="../img/search.svg" alt="메인페이지 로고">
+                            <img src="../images/search.svg" alt="메인페이지 로고">
                         </a>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                 
                 <div class="cateItem1">
                     <ul class="cate_inav">
-                        <li><a href="#"><img src="../img/home.svg" alt="홈 로고"></a></li> >
+                        <li><a href="#"><img src="../images/home.svg" alt="홈 로고"></a></li> >
                         <li><a href="#">강아지</a> ></li>
                         <li><a href="#">사료</a> ></li>
                         <li><a href="#">건식</a></li>
@@ -90,7 +90,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
@@ -101,7 +101,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
@@ -112,7 +112,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
@@ -123,7 +123,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
@@ -134,7 +134,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
@@ -145,7 +145,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
@@ -156,7 +156,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
@@ -167,7 +167,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
@@ -178,7 +178,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
@@ -189,7 +189,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
@@ -200,7 +200,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
@@ -211,7 +211,7 @@
                         <li>
                             <a href="#">
                                 <div class="cate_ani_product">
-                                    <img src="../img/dogbest.svg">
+                                    <img src="../images/dogbest.svg">
                                     <div class="cate_product_text">
                                         <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
                                         <b>32,000원</b>
