--- a/Web/bomandyam/html/privacyPolicy.html
+++ b/Web/bomandyam/html/privacyPolicy.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>개인정보 처리방침</title>
-        <link rel="stylesheet" href="../css/main.css">
-        <link rel="stylesheet" href="../css/pick_icon.css">
-        <link rel="stylesheet" href="../css/floatbanner.css">
+        <link rel="stylesheet" href="../stylesheets/main.css">
+        <link rel="stylesheet" href="../stylesheets/pick_icon.css">
+        <link rel="stylesheet" href="../stylesheets/floatbanner.css">
     </head>
     <body>
         <div id="wrap">
@@ -15,7 +15,7 @@
                 <div></div>
                 <h1 class="logo">
                     <a href="../index.html">
-                        <img src="../img/logo.svg" alt="메인페이지 로고">
+                        <img src="../images/logo.svg" alt="메인페이지 로고">
                     </a>
                     <a class="logo_text" href="../index.html">
                         <div class="logo_text">BOM and YAM</div>
@@ -50,7 +50,7 @@
                 <div class="search_area">
                     <input type="text" id="search_form" name="keyword" class="search_text">
                     <a href="#" class="search_img">
-                        <img src="../img/search.svg" alt="메인페이지 로고">
+                        <img src="../images/search.svg" alt="메인페이지 로고">
                     </a>
                 </div>
             </div>
