--- a/Web/bomandyam/html/product.html
+++ b/Web/bomandyam/html/product.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>상품판매 페이지</title>
-        <link rel="stylesheet" href="../css/pick_icon.css">
-        <link rel="stylesheet" href="../css/main.css">
-        <link rel="stylesheet" href="../css/product.css">
-        <link rel="stylesheet" href="../css/floatbanner.css">
+        <link rel="stylesheet" href="../stylesheets/pick_icon.css">
+        <link rel="stylesheet" href="../stylesheets/main.css">
+        <link rel="stylesheet" href="../stylesheets/product.css">
+        <link rel="stylesheet" href="../stylesheets/floatbanner.css">
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-        <script type="text/javascript" src="../js/floatbanner.js"></script>
-        <script type="text/javascript" src="../js/product.js"></script>
+        <script type="text/javascript" src="../javascripts/floatbanner.js"></script>
+        <script type="text/javascript" src="../javascripts/product.js"></script>
     </head>
 <body>
     <div id="wrap">
@@ -18,7 +18,7 @@
                 <div></div>
                 <h1 class="logo">
                     <a href="../index.html">
-                        <img src="../img/logo.svg" alt="메인페이지 로고">
+                        <img src="../images/logo.svg" alt="메인페이지 로고">
                     </a>
                     <a class="logo_text" href="../index.html">
                         <div class="logo_text">BOM and YAM</div>
@@ -53,7 +53,7 @@
                 <div class="search_area">
                     <input type="text" id="search_form" name="keyword" class="search_text">
                     <a href="#" class="search_img">
-                        <img src="../img/search.svg" alt="메인페이지 로고">
+                        <img src="../images/search.svg" alt="메인페이지 로고">
                     </a>
                 </div>
             </div>
@@ -78,11 +78,11 @@
 
             <div class="purchase_product">
                 <div class="purchase_category">
-                    <div><img src="../img/homeicon.svg" alt="홈아이콘"></div>
+                    <div><img src="../images/homeicon.svg" alt="홈아이콘"></div>
                     <div>&nbsp>&nbsp강아지&nbsp>&nbsp사료&nbsp>&nbsp간식</div>
                 </div>
                 <div class="purchase_info">
-                    <div><img src="../img/product.svg"width="400px" height="400px" alt="판매 상품 이미지"></div>
+                    <div><img src="../images/product.svg" width="400px" height="400px" alt="판매 상품 이미지"></div>
                     <div class="purchase_area">
                         <div class="purchase_title">
                             로얄캐닌 독 말티즈 어덜트 1.5kg
@@ -94,8 +94,8 @@
                         <div style="color: #00ffba">택배 배송</div>
                         <div class="color_font">16시 이전 결제시 당일 출고 예정</div>
                         <div class="delivery_info">
-                            <div class="purchase_icon"><img src="../img/box.svg" alt="택배">재고있음</div>
-                            <div class="purchase_icon"><img src="../img/truck.svg" alt="트럭">무료배송</div>
+                            <div class="purchase_icon"><img src="../images/box.svg" alt="택배">재고있음</div>
+                            <div class="purchase_icon"><img src="../images/truck.svg" alt="트럭">무료배송</div>
                         </div>
                         <div class="purchase_box">
                             <div class="space_between">
