--- a/Web/bomandyam/html/best.html
+++ b/Web/bomandyam/html/best.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>봄이와 얌</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/best.css">
-    <link rel="stylesheet" href="../css/floatbanner.css">
-    <link rel="stylesheet" href="../css/pick_icon.css">
+    <link rel="stylesheet" href="../stylesheets/main.css">
+    <link rel="stylesheet" href="../stylesheets/best.css">
+    <link rel="stylesheet" href="../stylesheets/floatbanner.css">
+    <link rel="stylesheet" href="../stylesheets/pick_icon.css">
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="../js/best.js"></script>
-    <script type="text/javascript" src="../js/floatbanner.js"></script>
+    <script src="../javascripts/best.js"></script>
+    <script type="text/javascript" src="../javascripts/floatbanner.js"></script>
 
 </head>
 <body>
@@ -19,7 +19,7 @@
             <div></div>
             <h1 class="logo">
                 <a href="../index.html">
-                    <img src="../img/logo.svg" alt="메인페이지 로고">
+                    <img src="../images/logo.svg" alt="메인페이지 로고">
                 </a>
                 <a class="logo_text" href="../index.html">
                     <div class="logo_text">BOM and YAM</div>
@@ -54,7 +54,7 @@
             <div class="search_area">
                 <input type="text" id="search_form" name="keyword" class="search_text">
                 <a href="#" class="search_img">
-                    <img src="../img/search.svg" alt="메인페이지 로고">
+                    <img src="../images/search.svg" alt="메인페이지 로고">
                 </a>
             </div>
         </div>
@@ -94,7 +94,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -105,7 +105,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -116,7 +116,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -127,7 +127,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -138,7 +138,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -149,7 +149,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -160,7 +160,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -171,7 +171,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -182,7 +182,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -193,7 +193,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
@@ -204,7 +204,7 @@
                     <li>
                         <a href="#">
                             <div class="ani_product">
-                                <img src="../img/dogbest.svg" width="200px" height="200px" alt="얌이">
+                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
                                 <div class="product_text">
                                     <div class="product_title">건강백서 건강한 피부 6kg</div>
                                     <b>32,000원</b>
