--- a/Web/bomandyam/html/petInfo.html
+++ b/Web/bomandyam/html/petInfo.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Pet Information</title>
-        <link rel="stylesheet" href="../css/petInfo.css">
-        <link rel="stylesheet" href="../css/main.css">
-        <link rel="stylesheet" href="../css/pick_icon.css">
+        <link rel="stylesheet" href="../stylesheets/petInfo.css">
+        <link rel="stylesheet" href="../stylesheets/main.css">
+        <link rel="stylesheet" href="../stylesheets/pick_icon.css">
     </head>
     <body>
         <div id="wrap">
@@ -14,7 +14,7 @@
                     <div></div>
                     <h1 class="logo">
                         <a href="../index.html">
-                            <img src="../img/logo.svg" alt="메인페이지 로고">
+                            <img src="../images/logo.svg" alt="메인페이지 로고">
                         </a>
                         <a class="logo_text" href="../index.html">
                             <div class="logo_text">BOM and YAM</div>
@@ -49,7 +49,7 @@
                     <div class="search_area">
                         <input type="text" id="search_form" name="keyword" class="search_text">
                         <a href="#" class="search_img">
-                            <img src="../img/search.svg" alt="메인페이지 로고">
+                            <img src="../images/search.svg" alt="메인페이지 로고">
                         </a>
                     </div>
                 </div>
