--- a/Web/bomandyam/html/category.html
+++ b/Web/bomandyam/html/category.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../css/category.css">
         <link rel="stylesheet" href="../css/main.css">
         <link rel="stylesheet" href="../css/pick_icon.css">
+        <script src="../js/category.js"></script>
     </head>
     <body>
         <div id="wrap">
